<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home" android:icon="@drawable/ic_nav_home" android:title="首页" />
    <item android:id="@+id/nav_plan" android:icon="@drawable/ic_nav_plan" android:title="计划" />
    <item android:id="@+id/nav_records" android:icon="@drawable/ic_nav_records" android:title="记录" />
    <item android:id="@+id/nav_settings" android:icon="@drawable/ic_nav_settings" android:title="设置" />
</menu>
